chainsight-cdk/src/convert/snapshots/chainsight_cdk__convert__candid__tests__compile_with_depended_did__multiple.snap
---
source: chainsight-cdk/src/convert/candid.rs
expression: compiled
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub struct CurrencyValue { pub usd: f64 }
pub type RequestArgsType = u64;
pub type ResponseType = Box<Snapshot>;
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub struct Snapshot { pub value: Box<SnapshotValue>, pub timestamp: u64 }
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub struct SnapshotValue { pub dai: CurrencyValue }
