chainsight-cdk/src/convert/snapshots/chainsight_cdk__convert__candid__tests__compile_with_depended_did__with_reserved_type.snap
---
source: chainsight-cdk/src/convert/candid.rs
expression: compiled
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
pub type RequestArgsType = Box<RequestArgsTypeInDid1>;
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub struct RequestArgsTypeInDid1(u64);
pub type ResponseType = Box<ResponseTypeInDid1>;
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub struct ResponseTypeInDid1(String);
