chainsight-cdk/src/convert/snapshots/chainsight_cdk__convert__candid__tests__compile_with_depended_did__with_variant.snap
---
source: chainsight-cdk/src/convert/candid.rs
expression: compiled
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
enum Env { Production, Test, LocalDevelopment }
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
enum InitError {
  InvalidDestination(String),
  InvalidPrincipal(candid::Principal),
  InvalidContent(String),
  InvalidRequest(String),
}
pub type RequestArgsType = Env;
pub type ResponseType = Box<Result>;
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
enum Result { Ok, Err(InitError) }
