chainsight-cdk/src/convert/snapshots/chainsight_cdk__convert__candid__tests__compile_with_depended_did__with_vec.snap
---
source: chainsight-cdk/src/convert/candid.rs
expression: compiled
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub struct HttpsSnapshotIndexerSourceAttrs { pub queries: Vec<(String,String,)> }
pub type ResponseType = Vec<Box<Sources>>;
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub enum SourceType { evm, https, chainsight }
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub struct Sources {
  pub source: String,
  pub interval_sec: Option<u32>,
  pub attributes: HttpsSnapshotIndexerSourceAttrs,
  pub source_type: SourceType,
}
